There is a bug at rendering TDatePicker over a THtmlArea . Modifiy the z-index

--- a/HoruxGui/trunk/prado/framework/Web/Javascripts/source/prado/datepicker/default.css
+++ b/HoruxGui/trunk/prado/framework/Web/Javascripts/source/prado/datepicker/default.css
@@ -6,6 +6,7 @@
 	font-size: 11px;
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
 	cursor: default;
+    z-index:100;
 }
 
 .TDatePickerButton
